# autofocus

./: .gitignore  CMakeLists.txt  README.md  extract_frames.py  focus_test.cpp
include/: autofocus.h
src/: autofocus.cpp
